:bricks: fix: New resumes

--- a/src/locale/pt.json
+++ b/src/locale/pt.json
@@ -4,7 +4,7 @@
        "contato": "CONTATE-ME",
        "sobre": "Sobre mim",
        "educação": "Educação",
-       "estudo": "Engenharia Mecânica",
+       "estudo": "Engenharia da Computação",
        "experiencia": "Experiência",
        "ramo": "Desenvolvedor Full Stack",
        "bio": "Meu nome é Rafael Damasceno, tenho 21 anos e sou apaixonado por tecnologia e inovação. Sou desenvolvedor web com um grande interesse em processos de automação, sempre buscando maneiras de tornar as tarefas mais eficientes e eficazes. Atualmente, estou cursando Engenharia Mecânica, o que me proporciona uma visão abrangente e multidisciplinar para abordar problemas e criar soluções integradas. Minha formação acadêmica, aliada à minha experiência prática no desenvolvimento web, me capacita a gerenciar projetos com uma abordagem detalhada e orientada a resultados. Sou entusiasta da gestão de projetos e adoro trabalhar em equipe para alcançar metas comuns. Acredito que a combinação de habilidades técnicas e de gerenciamento é essencial para o sucesso de qualquer empreendimento. Se você está procurando alguém dedicado, com uma forte base técnica e habilidades de liderança, estou à disposição para colaborar em novos projetos e desafios.",
